--- a/LogInAndSignUpDemo/Pindow-Info.plist
+++ b/LogInAndSignUpDemo/Pindow-Info.plist
@@ -53,6 +53,14 @@
 				<string>com.pindow.test</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>pin1435849prod</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
